Remove clears before/after bingoRow - No longer needed and was causing layout issues in Firefox

--- a/css/waltonbingo.css
+++ b/css/waltonbingo.css
@@ -57,11 +57,6 @@ h3 {
   -moz-box-shadow: 0 0 57px rgba(0,0,0,0.25);
   box-shadow: 0 0 57px rgba(0,0,0,0.25);*/
 }
-.bingoRow:before, .bingoRow:after {
-  content:"";
-  display:table;
-  clear:both;
-}
 .bingoRow {
   display:table-row;
   width:100%;
